--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-abcd
-123
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    Ovo je pocetna stranica sajta
+  </body>
+</html>
