--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Ovo je naslov</title>
   </head>
   <body>
     Ovo je pocetna stranica sajta
